ui: facet filter and tags-container overflow bug fixes (#11119)
* Changed facet filter buckets render length. Only top 10 most used filters will be shown in the left panel.
Fixed the overflow issue of tags-container component for longer tag name

* Fixed overflowing issue while adding tags
Improved Tags component and use antd tag to show tags

* Reduced the gap

* Fixed tooltip placement issue with facet filters

* Fixed breadcrumb issue on dataInsights and ESReIndex pipeline logs page

* Fixed cypress tests

* Added delay for tooltip popup to avoid cypress flakyness

* Added delays to the tooltips and changed positions to avoid flakyness in cypress

* Fixed failing cypress tests

---------

--- a/openmetadata-ui/src/main/resources/ui/src/styles/components/size.less
+++ b/openmetadata-ui/src/main/resources/ui/src/styles/components/size.less
@@ -86,8 +86,11 @@
 .w-max-1080 {
   max-width: 1080px;
 }
-.w-500 {
-  width: 500px;
+.w-max-fit-content {
+  max-width: fit-content;
+}
+.w-max-95 {
+  max-width: 95%;
 }
 .w-300 {
   width: 300px;
